--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/koa-router": "^7.4.4",
     "@types/koa2-cors": "^2.0.2",
     "async-validator": "^4.2.5",
+    "flq": "^0.2.2",
     "koa": "^2.13.4",
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.0",
