--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.0",
     "koa2-cors": "^2.0.6",
+    "nanoid": "^4.0.0",
     "nodemon": "^2.0.20"
   }
 }
