--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/koa-router": "^7.4.4",
     "@types/koa2-cors": "^2.0.2",
     "async-validator": "^4.2.5",
     "flq": "^0.2.2",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-body": "^6.0.1",
+    "koa-jwt": "^4.0.3",
     "koa-router": "^12.0.0",
     "koa2-cors": "^2.0.6",
     "nanoid": "^4.0.0",
