--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-router": "^12.0.0",
     "koa2-cors": "^2.0.6",
     "nanoid": "^4.0.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "qiniu": "^7.8.0"
   }
 }
