--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/multer": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/koa-router": "^7.4.4",
     "@types/koa2-cors": "^2.0.2",
+    "@types/koa__multer": "^2.0.4",
     "async-validator": "^4.2.5",
+    "del": "^7.0.0",
     "flq": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
@@ -21,8 +24,12 @@
     "koa-jwt": "^4.0.3",
     "koa-router": "^12.0.0",
     "koa2-cors": "^2.0.6",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.0",
     "nodemon": "^2.0.20",
     "qiniu": "^7.8.0"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.7"
   }
 }
