11- 菜品类目接口2

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/koa__multer": "^2.0.4",
     "async-validator": "^4.2.5",
     "del": "^7.0.0",
-    "flq": "0.2.2",
+    "flq": "^0.2.5",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-body": "^6.0.1",
